improved typescript generator